homework4 completed